working_api_call

--- a/index.html
+++ b/index.html
@@ -5,14 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link type="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script type="text/javascript" src="assets/javascript/javacript.js"></script>
+    <link type="stylesheet" href="assets/css/style.css">
+
 
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+        </form>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4">
+            </div>
+            <div class="col-4">
+            </div>
+            <div class="col-4">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Search for GIFS" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
     
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/javacript.js"></script>
 </body>
 </html>
