working_api_call

--- a/index.html
+++ b/index.html
@@ -14,26 +14,6 @@
     <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
             <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
         </form>
     </nav>
     <div class="container-fluid">
@@ -49,6 +29,10 @@
                             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
                         </div>
                     </div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="gifHolder" class="col-12">
             </div>
         </div>
 
