--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
-        <form class="form-inline">
-            <button class="btn btn-sm btn-outline-secondary" type="button">BUTTON TOPIC</button>
+        <form id="buttonHolder" class="form-inline">
         </form>
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div id="displayGif" class="col-4">
             </div>
             <div class="col-4">
             </div>
@@ -31,10 +30,7 @@
                     </div>
             </div>
         </div>
-        <div class="row">
-            <div id="gifHolder" class="col-12">
-            </div>
-        </div>
+
 
     
     </div>
