intial_hw_commit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <form id="buttonHolder" class="form-inline">
+    <nav class="navbar navbar-light bg-secondary">
+        <form id="buttonHolder" class="form-inline bg-warning">
         </form>
     </nav>
     <div class="container-fluid">
