--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-light bg-secondary">
-        <form id="buttonHolder" class="form-inline bg-warning">
+    <nav class="navbar navbar-light">
+        <form id="buttonHolder" class="form-inline">
         </form>
     </nav>
     <div class="container-fluid">
@@ -25,7 +25,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Search for GIFS" aria-label="Recipient's username" aria-describedby="button-addon2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
+                            <button id="buttonMaker" class="btn btn-outline-secondary" type="button">Submit</button>
                         </div>
                     </div>
             </div>
